<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_appbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingEnd="16dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/accent"
                android:text="@string/already_registered"
                fontPath="fonts/OpenSans-Light.ttf"
                tools:ignore="MissingPrefix" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textCursorDrawable="@drawable/white_cursor"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:nextFocusDown="@+id/et_cpf"
                android:background="@drawable/background_border_grey"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="16dp"
                android:lines="1"
                android:hint="@string/type_your_email"
                fontPath="fonts/OpenSans-Light.ttf"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/tv_email_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:visibility="gone"
                android:textColor="@color/red"
                android:text="@string/invalid_email" />

            <EditText
                android:id="@+id/et_cpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textCursorDrawable="@drawable/white_cursor"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:background="@drawable/background_border_grey"
                android:imeOptions="actionGo"
                android:inputType="number"
                android:maxLines="1"
                android:padding="16dp"
                android:lines="1"
                android:hint="@string/type_your_cpf"
                fontPath="fonts/OpenSans-Light.ttf"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/tv_cpf_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:visibility="gone"
                android:textColor="@color/red"
                android:text="@string/invalid_cpf" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textColor="@color/white"
                android:padding="@dimen/button_padding"
                android:text="@string/join"
                fontPath="fonts/OpenSans-Bold.ttf"
                tools:ignore="MissingPrefix" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/accent"
                android:text="@string/join_bclub"
                fontPath="fonts/OpenSans-Light.ttf"
                tools:ignore="MissingPrefix" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/text_secondary"
                android:text="@string/choose_plan_to_join_bclub"
                fontPath="fonts/OpenSans-Light.ttf"
                tools:ignore="MissingPrefix" />

            <Button
                android:id="@+id/btn_plans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textColor="@color/white"
                android:padding="@dimen/button_padding"
                android:text="@string/choose_plan"
                fontPath="fonts/OpenSans-Bold.ttf"
                tools:ignore="MissingPrefix" />

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp" />

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>