<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/include_appbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingEnd="16dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/accent"
                android:text="@string/register"
                fontPath="fonts/OpenSans-Light.ttf"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/tv_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:text="@string/register_with_email"
                fontPath="fonts/OpenSans-Light.ttf"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/tv_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:visibility="gone"
                android:textColor="@color/text_secondary"
                android:text="@string/voucher_email_summary"
                fontPath="fonts/OpenSans-Light.ttf"
                tools:ignore="MissingPrefix" />

            <EditText
                android:id="@+id/et_voucher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textCursorDrawable="@drawable/white_cursor"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:nextFocusDown="@+id/et_email"
                android:background="@drawable/background_border_grey"
                android:imeOptions="actionNext"
                android:inputType="textNoSuggestions|text"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="16dp"
                android:lines="1"
                android:hint="@string/enter_the_voucher"
                fontPath="fonts/OpenSans-Light.ttf"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/tv_voucher_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/red"
                android:visibility="gone"
                android:text="@string/invalid_voucher" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textCursorDrawable="@drawable/white_cursor"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:background="@drawable/background_border_grey"
                android:imeOptions="actionGo"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:lines="1"
                android:hint="@string/type_here_your_email"
                fontPath="fonts/OpenSans-Light.ttf"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/tv_email_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/red"
                android:visibility="gone"
                android:text="@string/invalid_email" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:drawablePadding="8dp"
                android:paddingBottom="@dimen/button_padding"
                android:drawableStart="@drawable/ic_mail"
                android:drawableLeft="@drawable/ic_mail"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"
                android:paddingTop="@dimen/button_padding"
                android:textColor="@color/white"
                android:gravity="start|center_vertical"
                android:text="@string/register_with_email_button"
                fontPath="fonts/OpenSans-Bold.ttf"
                tools:ignore="MissingPrefix,RtlSymmetry" />
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>